@@ -13,23 +13,22 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class OnPropertyArrayCondition extends SpringBootCondition {
 
-    public static final String[] REQUIRED_SERVER_KEY = {
+    protected static final String[] REQUIRED_SERVER_KEY = {
         "name",
         "host",
         "user"
     };
 
-    public static final String[] REQUIRED_INBOUND_KEY = {
+    protected static final String[] REQUIRED_INBOUND_KEY = {
         "remoteDir",
         "localDir",
         "schedule"
     };
 
-    public static final String[] REQUIRED_OUTBOUND_KEY = {
+    protected static final String[] REQUIRED_OUTBOUND_KEY = {
             "remoteDir",
             "localDir",
             "schedule"
@@ -52,10 +51,9 @@ public class OnPropertyArrayCondition extends SpringBootCondition {
         for (Entry<String, Map<String, Object>> entry: serverProps.entrySet()) {
             String index = entry.getKey();
             Map<String, Object> serverDetails = entry.getValue();
-            //Set<String> keySet = serverDetails.keySet();
 
             missingProperties.addAll(Arrays.stream(REQUIRED_SERVER_KEY).filter(key -> !serverDetails.containsKey(key))
-                    .map(key -> "sftp.server[" + index + "]."+ key).collect(Collectors.toList()));
+                    .map(key -> "sftp.server[" + index + "]."+ key).toList());
 
             if(!serverDetails.containsKey("privateKeyPath") && !serverDetails.containsKey("password")) {
                 missingProperties.add("sftp.server[" + index + "].privateKeyPath");
@@ -69,11 +67,10 @@ public class OnPropertyArrayCondition extends SpringBootCondition {
                 for(Entry<String, Map<String, String>> inboundEntry: inboundDetails.entrySet()) {
                     String inIndex = inboundEntry.getKey();
                     Map<String, String> inProps = inboundEntry.getValue();
-                    //Set<String> inKeySet = inProps.keySet();
 
                     missingProperties.addAll(Arrays.stream(REQUIRED_INBOUND_KEY).filter(key -> !inProps.containsKey(key))
                             .map(key -> "sftp.server["+ index + "]inbound["+ inIndex + "]." + key)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
             }
 
@@ -83,11 +80,10 @@ public class OnPropertyArrayCondition extends SpringBootCondition {
                 for(Entry<String, Map<String, String>> outboundEntry: outboundDetails.entrySet()) {
                     String inIndex = outboundEntry.getKey();
                     Map<String, String> inProps = outboundEntry.getValue();
-                    Set<String> inKeySet = inProps.keySet();
 
                     missingProperties.addAll(Arrays.stream(REQUIRED_OUTBOUND_KEY).filter(key -> !inProps.containsKey(key))
                             .map(key -> "sftp.server["+ index + "]outbound["+ inIndex + "]." + key)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
             }
 
